@@ -1834,6 +1834,13 @@ Wed Jun 30 16:56:32 CEST 2004
 Sun Jul  4 16:53:53 CEST 2004
 
 	- Made sure SET DESCRIPTOR accepts all data types including constants.
+	- Some code cleanup.
+	
+Mon,  5 Jul 2004 10:41:54 +0200
+
+	- Fixed indicator in SET DESCRIPTOR.
+	- Added special handling of descriptor header information.
+	- More code cleanup.
 	- Set pgtypes library version to 1.2.
 	- Set ecpg version to 3.2.0.
 	- Set compat library version to 1.2.
